5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1593_1802.log
== TEST (2019-03-26 11:05:42) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
				 
print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:06:09) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
				 
print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:11) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = input("Numero do dado 1: "))
d2 = input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
				 
print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:20) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
				 
print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:08:56) 
-- CODE:
from math import * 

vida = int(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
				 
print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:09:04) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
				 
print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:09:40) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
#d2 = int(input("Numero do dado 2: "))
#				 
#dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
#				 
#danototal = int(dano)
#				 
#print(vida - danototal)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:07) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: ")
				 
d1 = int(input("Numero do dado 1: "))
#d2 = int(input("Numero do dado 2: "))
#				 
#dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
#				 
#danototal = int(dano)
#				 
#print(vida - danototal)
print(d1)
-- ERROR:
File "XXXX", line 5
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:23) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: "))
				 
d1 = int(input("Numero do dado 1: "))
#d2 = int(input("Numero do dado 2: "))
#				 
#dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
#				 
#danototal = int(dano)
#				 
#print(vida - danototal)
print(d1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:33) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: "))
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
			 
print(vida - danototal)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:10:42) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: "))
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
			 
print(vida - danototal)
-- EXECUTION TIME:
0.143701
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:32:47) 
-- CODE:
from math import * 

vida = float(input("Vida inicial dos monstros: "))
				 
d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))
				 
dano = abs((5 * d1) ** 0.5 + pi ** (d2 / 3))
				 
danototal = int(dano)
			 
print(vida - danototal)
-- EXECUTION TIME:
0.135681
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
